Fix image cropping css

--- a/app/components/CvHeader/styles.css
+++ b/app/components/CvHeader/styles.css
@@ -19,6 +19,8 @@
   width: 100%;
   height: 100%;
   border-radius: 50%;
+  object-fit: cover;
+  object-position: center 15%;
 }
 
 .contact {
